<resources>
    <string name="app_name">FusionCloudSDKAndroidDemo</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Products -->
    <string name="greentea">Green Tea. Blended with mint,
    lemongrass and lemon verbena, then sweetened just right and given a good shake with ice, so-refreshing!</string>


    <string name="latte">A neat twist that can be done with any of the new Teavana teas is called a tea latte.
    Basically, a tea latte is equal parts hot tea and steamed milk.  </string>


    <string name="orangesmoothie">A nourishing blend of natural orange mango juice,
    a whole banana, milk, whey protein, and fiber powder and ice.</string>


    <string name="orangevanilla">This rich and creamy blend of vanilla bean, milk and ice topped with
    whipped cream takes va-va-vanilla flavor to another level.</string>


    <string name="cappcuni">A cappuccino is mostly milk foam, which weighs a lot less than milk. ... More specifically, a
    cappuccino is made up of shots of espresso, half steamed milk (2% by default,) </string>


    <string name="thaitea">Thai Tea is is made from strongly-brewed black tea, often spiced with ingredients such as star anise,
    crushed tamarind, cardamom</string>
    <string name="tea">Right next to water, tea is hailed as the most consumed drink in the world. Every single drop of tea
    comes from the same type of plant</string>
    <string name="bubbletea">Bubble Tea is the name given to the wide variety of refreshing flavoured
    fruit teas and milk teas served ice cold or piping hot with chewy
    tapioca balls that you suck up through a big fat straw! .</string>
    <string name="match">Smooth and creamy matcha sweetened just right and served with steamed milk. This
    favorite will transport your senses to pure green delight. </string>
    <string name="requestedamount">RequestedAmount</string>
    <string name="itemamount">ItemAmount</string>
    <string name="tipamount">TipAmount</string>
    <string name="product_code">Product Code</string>
    <string name="ui_header">Transaction UI Display</string>
    <string name="authourized_amount">Authourized Amount</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="surcharge_amount">Surcharge Amount</string>
    <string name="card_account">Card Account</string>
    <string name="payment_brand">Payment Brand</string>
    <string name="entry_mode">Entry Mode</string>
    <string name="payment_type">Payment Type</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="masked_pan">Masked PAN</string>
    <string name="service_id">Service ID</string>

</resources>