<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:paddingLeft="32dp"
    android:paddingTop="32dp"
    android:paddingRight="32dp"
    android:paddingBottom="32dp"
    android:background="@color/colorGrey"
    tools:context=".RequestActivity">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tblProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="100dip"
        android:background="@drawable/shapes">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_item_amount"
                android:text="@string/itemamount" />

            <EditText
                android:id="@+id/input_item_amount"
                android:text="99.99"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_tip_amount"
                android:text="@string/tipamount" />

            <EditText
                android:id="@+id/input_tip_amount"
                android:text="1.50"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_product_code"
                android:text="@string/product_code" />

            <EditText
                android:id="@+id/input_product_code"
                android:hint="SampleProductCode"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="6">
            <Button
                android:id="@+id/btnLogin"
                android:layout_weight="1"
                android:text="Login"
                android:textAllCaps="false"
                android:fontFamily="@font/ciutadella_regular"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <Button
                android:id="@+id/btnPurchase"
                android:layout_weight="1"
                android:text="Purchase"
                android:textAllCaps="false"
                android:fontFamily="@font/ciutadella_regular"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <Button
                android:id="@+id/btnRefund"
                android:layout_weight="1"
                android:text="Refund"
                android:textAllCaps="false"
                android:fontFamily="@font/ciutadella_regular"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
        </TableRow>



    </TableLayout>

</FrameLayout>